@@ -1,3 +1,8 @@
+2002-08-01  Reinhard Max  <max@suse.de>
+
+	* win/tclWinPort.h: The windows headers don't provide socklen_t,
+	so we have to do it.
+
 2002-07-31  Miguel Sofer  <msofer@users.sourceforge.net>
 
 	* generic/tclInt.h (USE_THREAD_ALLOC): for unshared objects,
